--- a/pkg/template/templates/addons/kuberay-operator.yaml
+++ b/pkg/template/templates/addons/kuberay-operator.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     llmos.ai/system-addon: "true"
   annotations:
-    field.llmos.ai/description: "KubeRay Operator manages the deployment and management of Ray applications and resources."
+    field.llmos.ai/description: "Facilitates the management of Ray clusters and other machine learning resources in your LLMOS cluster through the KubeRay Operator."
 spec:
   repo: http://system-charts-repo.llmos-system.svc
   chart: kuberay-operator
