feat: add built-in ceph cluster

--- a/deploy/charts/llmos-crd/templates/management.llmos.ai_managedaddons.yaml
+++ b/deploy/charts/llmos-crd/templates/management.llmos.ai_managedaddons.yaml
@@ -54,8 +54,12 @@ spec:
             properties:
               chart:
                 type: string
+              defaultValuesContent:
+                type: string
               enabled:
                 type: boolean
+              failurePolicy:
+                type: string
               repo:
                 type: string
               valuesContent:
