fix: add priority class to llmos & update ceph default

--- a/deploy/charts/llmos-operator/values.yaml
+++ b/deploy/charts/llmos-operator/values.yaml
@@ -23,6 +23,10 @@ nameOverride: ""
 fullnameOverride: ""
 depNameOverride: &depNameOverride "llmos"
 
+priorityClassNames:
+  operator: system-node-critical
+  webhook: system-node-critical
+
 operator:
   apiserver:
     replicaCount: 1
