--- a/deploy/charts/llmos-operator/templates/deployment-webhook.yaml
+++ b/deploy/charts/llmos-operator/templates/deployment-webhook.yaml
@@ -19,6 +19,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include "llmos-operator.serviceAccountName" . }}
+      priorityClassName: {{ .Values.priorityClassNames.webhook }}
       securityContext:
         {{- toYaml .Values.operator.webhook.podSecurityContext | nindent 8 }}
       containers:
