--- a/deploy/charts/llmos-operator/templates/deployment.yaml
+++ b/deploy/charts/llmos-operator/templates/deployment.yaml
@@ -26,6 +26,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include "llmos-operator.serviceAccountName" . }}
+      priorityClassName: {{ .Values.priorityClassNames.operator }}
       securityContext:
         {{- toYaml .Values.operator.apiserver.podSecurityContext | nindent 8 }}
       containers:
