fix: template annotations not updated & update schema

--- a/deploy/charts/llmos-crd/templates/ml.llmos.ai_modelservices.yaml
+++ b/deploy/charts/llmos-crd/templates/ml.llmos.ai_modelservices.yaml
@@ -22,7 +22,7 @@ spec:
       name: Ready
       type: integer
     - jsonPath: .status.state
-      name: State
+      name: Status
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Age
