--- a/deploy/charts/llmos-crd/templates/ml.llmos.ai_notebooks.yaml
+++ b/deploy/charts/llmos-crd/templates/ml.llmos.ai_notebooks.yaml
@@ -17,8 +17,20 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
+    - jsonPath: .metadata.labels['ml.llmos.ai\/notebook-type']
+      name: Type
+      type: string
+    - jsonPath: .spec.template.spec.containers[0].resources.limits.cpu
+      name: Cpu
+      type: string
+    - jsonPath: .spec.template.spec.containers[0].resources.limits.memory
+      name: Memory
+      type: string
+    - jsonPath: .status.state
+      name: Status
+      type: string
     - jsonPath: .metadata.creationTimestamp
-      name: AGE
+      name: Age
       type: date
     name: v1
     schema:
