--- a/pkg/template/templates/addons/llmos-monitoring.yaml
+++ b/pkg/template/templates/addons/llmos-monitoring.yaml
@@ -50,6 +50,13 @@ spec:
           cpu: 100m
     grafana:
       enabled: true
+      image:
+        registry: ghcr.io
+        repository: llmos-ai/mirrored-grafana
+      proxy:
+        image:
+          registry: ghcr.io
+          repository: llmos-ai/mirrored-library-nginx
       resources:
         limits:
           memory: 200Mi
@@ -59,6 +66,13 @@ spec:
           cpu: 100m
     prometheusOperator:
       enabled: true
+      admissionWebhooks:
+        patch:
+          enabled: true
+          image:
+            registry: ghcr.io
+            repository: llmos-ai/mirrored-ingress-nginx-kube-webhook-certgen
+            tag: v20221220-controller-v1.5.1-58-g787ea74b6
     prometheus:
       enabled: true
       prometheusSpec:
@@ -93,6 +107,10 @@ spec:
       enabled: false
     kubeStateMetrics:
       enabled: true
+    kube-state-metrics:
+      image:
+        registry: ghcr.io
+        repository: llmos-ai/mirrored-kube-state-metrics
     nodeExporter:
       enabled: true
     dcgmExporter:
