--- a/pkg/template/templates/addons/llmos-monitoring.yaml
+++ b/pkg/template/templates/addons/llmos-monitoring.yaml
@@ -14,7 +14,7 @@ metadata:
 spec:
   repo: http://system-charts-repo.llmos-system.svc
   chart: llmos-monitoring
-  version: 0.1.3-up66.1.1
+  version: 0.1.4-up66.1.1
   enabled: false
   defaultValuesContent: |-
     nameOverride: "llmos-monitoring"
@@ -72,6 +72,13 @@ spec:
           image:
             registry: ghcr.io
             repository: llmos-ai/mirrored-ingress-nginx-kube-webhook-certgen
+      resources:
+        limits:
+          cpu: 500m
+          memory: 200Mi
+        requests:
+          cpu: 100m
+          memory: 100Mi
     prometheus:
       enabled: true
       prometheusSpec:
@@ -109,8 +116,26 @@ spec:
       image:
         registry: ghcr.io
         repository: llmos-ai/mirrored-kube-state-metrics
+      resources:
+        limits:
+          cpu: 200m
+          memory: 200Mi
+        requests:
+          cpu: 100m
+          memory: 130Mi
     nodeExporter:
       enabled: true
+    prometheus-node-exporter:
+      image:
+        registry: quay.io
+        repository: prometheus/node-exporter
+      resources:
+        limits:
+          cpu: 200m
+          memory: 50Mi
+        requests:
+          cpu: 100m
+          memory: 30Mi
     dcgmExporter:
       enabled: true
     modelServiceExporter:
