--- a/pkg/template/templates/addons/rook-ceph.yaml
+++ b/pkg/template/templates/addons/rook-ceph.yaml
@@ -18,6 +18,12 @@ spec:
       pullPolicy: IfNotPresent
     crds:
       enabled: true
+    resources:
+      limits:
+        memory: 512Mi
+      requests:
+        cpu: 100m
+        memory: 128Mi
     tolerations:
       - effect: NoSchedule
         key: node-role.kubernetes.io/master
