--- a/pkg/template/templates/addons/kuberay-operator.yaml
+++ b/pkg/template/templates/addons/kuberay-operator.yaml
@@ -21,3 +21,10 @@ spec:
     serviceAccount:
       create: false
       name: llmos-cluster-admin
+    resources:
+      limits:
+        cpu: 200m
+        memory: 512Mi
+      requests:
+        cpu: 20m
+        memory: 128Mi
