--- a/pkg/template/templates/addons/llmos-gpu-stack.yaml
+++ b/pkg/template/templates/addons/llmos-gpu-stack.yaml
@@ -26,11 +26,11 @@ spec:
           profilePort: 6060
         resources:
           requests:
-            cpu: 100m
-            memory: 200Mi
+            cpu: 20m
+            memory: 50Mi
           limits:
-            cpu: 500m
-            memory: 1Gi
+            cpu: 200m
+            memory: 512Mi
         tolerations:
           - key: CriticalAddonsOnly
             operator: Exists
@@ -53,6 +53,13 @@ spec:
         enabled: true
         serviceMonitor:
           enabled: false
+      operator:
+        limits:
+          cpu: 500m
+          memory: 350Mi
+        requests:
+          cpu: 50m
+          memory: 100Mi
       toolkit:
         env:
           - name: CONTAINERD_CONFIG
@@ -63,6 +70,13 @@ spec:
             value: nvidia
           - name: CONTAINERD_SET_AS_DEFAULT
             value: "true"
+      node-feature-discovery:
+        resources:
+          limits:
+            memory: 1024Mi
+          requests:
+            cpu: 20m
+            memory: 50Mi
     volcano:
       enabled: true
       basic:
@@ -95,14 +109,23 @@ spec:
           limits:
             cpu: 500m
             memory: 500Mi
+          requests:
+            cpu: 20m
+            memory: 50Mi
         scheduler_resources:
           limits:
             cpu: 500m
             memory: 1Gi
+          requests:
+            cpu: 20m
+            memory: 50Mi
         controller_resources:
           limits:
             cpu: 500m
             memory: 1Gi
+          requests:
+            cpu: 20m
+            memory: 50Mi
     devicePlugin:
       enabled: true
       image:
