--- a/pkg/template/templates/addons/system-upgrade-controller.yaml
+++ b/pkg/template/templates/addons/system-upgrade-controller.yaml
@@ -12,3 +12,8 @@ spec:
   chart: system-upgrade-controller
   version: 0.1.1
   enabled: true
+  defaultValuesContent: |-
+    resources:
+      requests:
+        cpu: 20m
+        memory: 128Mi
